--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -106,7 +106,12 @@ nav {
       }
     }
 
+    .login {
+      padding-top: 7%;
+    }
+
     .register {
+      padding-top: 7%;
       background-color: #fece51;
     }
 
